--- a/scr/Manufacture.dproj
+++ b/scr/Manufacture.dproj
@@ -119,6 +119,11 @@
             <Form>MainView</Form>
         </DCCReference>
         <DCCReference Include="MainViewModel.pas"/>
+        <DCCReference Include="MenuViewFrame.pas">
+            <Form>MenuView</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
