--- a/scr/Manufacture.dproj
+++ b/scr/Manufacture.dproj
@@ -117,13 +117,16 @@
         </DCCReference>
         <DCCReference Include="MainViewForm.pas">
             <Form>MainView</Form>
+            <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="MainViewModel.pas"/>
+        <DCCReference Include="MainPresenter.pas"/>
         <DCCReference Include="MenuViewFrame.pas">
             <Form>MenuView</Form>
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="MenuPresenter.pas"/>
+        <DCCReference Include="Registrations.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
