--- a/scr/Manufacture.dproj
+++ b/scr/Manufacture.dproj
@@ -127,6 +127,12 @@
         </DCCReference>
         <DCCReference Include="MenuPresenter.pas"/>
         <DCCReference Include="Registrations.pas"/>
+        <DCCReference Include="ProductsViewFrame.pas">
+            <Form>ProductsView</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="ProductsPresenter.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
