--- a/scr/Manufacture.dproj
+++ b/scr/Manufacture.dproj
@@ -133,6 +133,7 @@
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="ProductsPresenter.pas"/>
+        <DCCReference Include="DataModels.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
